--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,10 +28,10 @@ int spazi (int n) //stampa un numero n ddi spazi (utile nel disegno)
 int spostamento_tarta () //restituisce quanti passi fa la tartaruga
 int spostamento_lepre () //restituisce quanti passi fa la lepre
 
-int disegno_tarta (float avanzamento_tarta) 
-//in base all'avanzamento stampa la tarta sfalsata in base all'avanzamento
-int disegno_lepre (float avanzamento_lepre) 
-//in base all'avanzamento stampa la lepre sfalsata in base all'avanzamento
+int disegno_tarta (int avanzamento_tarta) 
+//in base all'avanzamento stampa la tarta sfalsata in base all'avanzamento e il traguardo
+int disegno_lepre (int avanzamento_lepre) 
+//in base all'avanzamento stampa la lepre sfalsata in base all'avanzamento e il traguardo
 
 
 Scrittura del main
@@ -57,6 +57,16 @@ ciclo
   Punteggio (vittorie e sconfitte)
   Si vuole rigiocare?
 }
+
+note: 
+La tartaruga e la lepre devonno essere lunghe uguali.
+Alla fine ci deve essere un traguardo.
+Per aspettare usare la funzione: get char.
+
+
+Da decidere:
+extra
+passi totali
 
 *********************************
 
