--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,8 +2,9 @@
 Qua si scrive i cambiamenti al codice.
 
 *********************************
-30/11/2020
+30/11/2020 - 01/12/2020
 
+Inizio progetto
 
 *********************************
 
