--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ Qua si scrive i cambiamenti al codice.
 *********************************
 30/11/2020
 
-Prova
+ciao
 
 *********************************
 
