Aggiunta funzione gettoni_vinti

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,4 +38,6 @@ int spazi (int n) --> void spazi (int n)
 
 Scrittura delle funzioni:
 int spostamento_lepre () 
+int gettoni_vinti (int gettoni_puntati, bool flag_scommessa, bool flag_vincitore) 
+
 
