--- a/CHANGELOG
+++ b/CHANGELOG
@@ -40,3 +40,4 @@ Scrittura delle funzioni:
 int spostamento_lepre () 
 int gettoni_vinti (int gettoni_puntati, bool flag_scommessa, bool flag_vincitore) 
 void disegno_tarta (int avanzamento_tarta, int passi_totali)
+void disegno_lepre (int avanzamento_tarta, int passi_totali)
