--- a/CHANGELOG
+++ b/CHANGELOG
@@ -78,4 +78,9 @@ system ("color ");//viene richiamta la funzione color per modificare il colore d
 int scommessa(gettoni)
 int scelta(0,1) (0 tartargura - 1 lepre)
 
-Aggiunta aggiustaento parte grafica del traguardo in caso di pareggio.
+Aggiunta aggiustaento parte grafica del traguardo in caso di pareggio. [Leporati e Ragnoli]
+
+Inserimento delle variabili e funizioni per la parte finale del ciclo responsabile delle partite:
+  void guadagno (int credito_finale, int credito_iniziale) //stampa quanti gettoni si ha vinto dall'inizio o si ha perso
+  int credito_iniziale; //è il credito che si aveva inserito all'inizio
+  int contatore_vittorie = 0, contatore_sconfitte = 0; //
